--- a/style.css
+++ b/style.css
@@ -1,10 +1,46 @@
 * {
     box-sizing: border-box;
+    background-color: #3B2F2F;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
     margin: 0;
 }
+
+button {
+    border-radius: 25px;
+    height: 50px;
+    width: 150px;
+    color: black;
+    background-color: white;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #D3D3D3;
+}
+
+@media (max-width: 768px) {
+    h1 {
+        font-size: 0.8rem;
+    }
+    button {
+        font-size: 0.7rem;
+        width: 75px;
+    }
+}
+
+/* @media (min-width: 3840px) {
+    h1 {
+        font-size: 1rem;
+    }
+    button {
+        font-size: 0.7rem;
+        width: 75px;
+    }
+} */
 
 .nav-container {
     display: flex;
@@ -15,4 +51,10 @@ body {
 
 .nav-tag {
     text-decoration: none;
+}
+
+.landing-container {
+    display: flex;
+    justify-content: space-evenly;
+    max-width: 3000px;
 }
