--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 * {
     box-sizing: border-box;
-    background-color: #3B2F2F;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -15,16 +13,200 @@ body {
 }
 
 button {
-    border-radius: 25px;
+    border-radius: 20px;
     height: 50px;
     width: 150px;
     color: black;
     background-color: white;
     cursor: pointer;
+    border: 2px solid white;
 }
 
 button:hover {
     background-color: #D3D3D3;
+}
+
+.landing-container {
+  /* display: flex; */
+  /* justify-content: space-evenly; */
+  max-width: 2000px;
+  overflow-x: hidden;
+  background-color: #eae1d5;
+}
+
+/* .landing-img-container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.landing-img {
+  width: 50%;
+} */
+
+.landing-img-container {
+  display: flex;  
+  justify-content: flex-start;
+  align-items: flex-end;  
+  width: 100%;  /* Prevent overflow */
+  height: auto;
+  padding-left: 30px;
+  /* padding: 0 1%; */
+}
+
+.landing-img-1 {
+  margin-left: 1em;
+  width: 14%; 
+  height: auto; 
+  object-fit: contain; 
+  margin-right: -1em;
+}
+
+.landing-img-2 {
+  width: 16%; 
+  height: auto; 
+  object-fit: contain; 
+  margin-right: -1em;
+}
+
+.landing-img-3 {
+  width: 18%; 
+  height: auto; 
+  object-fit: contain; 
+  margin-right: -1em;
+}
+
+.landing-img-4 {
+  width: 26%; 
+  height: auto; 
+  object-fit: contain; 
+  margin-right: -6.5em;
+  padding-top: 20px;
+}
+
+.landing-img-5 {
+  width: 24%; 
+  height: auto; 
+  object-fit: contain; 
+  margin-right: -6.5em;
+}
+
+.landing-img-6 {
+  width: 20%; 
+  height: auto; 
+  object-fit: contain; 
+  margin-right: -2.5em;
+}
+
+
+.landing-img {
+  width: auto; 
+  height: 220px;  
+  object-fit: contain; 
+}
+
+.landing-buttons {
+  display: flex;
+  justify-content: space-evenly;
+  padding-bottom: 70px;
+  padding-top: 10px;
+}
+
+li {
+  color: black;
+}
+
+@media (max-width: 768px) {
+
+  .landing-img-1 {
+    margin-left: 1em;
+    width: 14%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -1em;
+  }
+  
+  .landing-img-2 {
+    width: 16%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -1em;
+  }
+  
+  .landing-img-3 {
+    width: 18%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -1em;
+  }
+
+  .landing-img-4 {
+    width: 28%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -2.5em;
+    /* padding-top: 20px; */
+  }
+  
+  .landing-img-5 {
+    width: 26%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -2.5em;
+  }
+  
+  .landing-img-6 {
+    width: 24%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -2.5em;
+  }
+}
+
+@media (max-width: 1024px) {
+
+  .landing-img-1 {
+    margin-left: 1em;
+    width: 14%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -1em;
+  }
+  
+  .landing-img-2 {
+    width: 16%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -1em;
+  }
+  
+  .landing-img-3 {
+    width: 18%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -1em;
+  }
+
+  .landing-img-4 {
+    width: 24%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -2.5em;
+    /* padding-top: 20px; */
+  }
+  
+  .landing-img-5 {
+    width: 22%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -2.5em;
+  }
+  
+  .landing-img-6 {
+    width: 20%; 
+    height: auto; 
+    object-fit: contain; 
+    margin-right: -2.5em;
+  }
 }
 
 @media (max-width: 768px) {
@@ -231,10 +413,3 @@ button:hover {
       border-bottom: 1px solid #444;
     }
   }
-
-
-.landing-container {
-    display: flex;
-    justify-content: space-evenly;
-    max-width: 3000px;
-}
