--- a/style.css
+++ b/style.css
@@ -115,52 +115,45 @@ li {
   color: black;
 }
 
-@media (max-width: 768px) {
-
-  .landing-img-1 {
-    margin-left: 1em;
-    width: 14%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -1em;
-  }
-  
-  .landing-img-2 {
-    width: 16%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -1em;
-  }
-  
-  .landing-img-3 {
-    width: 18%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -1em;
-  }
-
-  .landing-img-4 {
-    width: 28%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -2.5em;
-    /* padding-top: 20px; */
-  }
-  
-  .landing-img-5 {
-    width: 26%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -2.5em;
-  }
-  
-  .landing-img-6 {
-    width: 24%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -2.5em;
-  }
+.LearnAdvertiseBox {
+    background-color: antiquewhite;
+    width: 30%;
 }
+
+.LearnAdvertiseBox p {
+    background-color: antiquewhite;
+    color: black;
+}
+
+.bigNum {
+    padding-top: 40px;
+    font-size: 7rem;
+    font-weight: 700;
+    text-align: center;
+    margin: 0px;
+}
+
+.mediumText {
+    padding: 20px;
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: center;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin: 0px;
+}
+
+.smallText {
+    padding: 20px;
+    font-size: 2rem;
+    font-weight: 600;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 40px;
+    margin: 20px;
+}
+
 
 @media (max-width: 1024px) {
 
@@ -412,4 +405,77 @@ li {
     .menu > li:not(:last-child) {
       border-bottom: 1px solid #444;
     }
+  }
+
+  @media (max-width: 768px) {
+
+    .landing-img-1 {
+      margin-left: 1em;
+      width: 14%; 
+      height: auto; 
+      object-fit: contain; 
+      margin-right: -1em;
+    }
+    
+    .landing-img-2 {
+      width: 16%; 
+      height: auto; 
+      object-fit: contain; 
+      margin-right: -1em;
+    }
+    
+    .landing-img-3 {
+      width: 18%; 
+      height: auto; 
+      object-fit: contain; 
+      margin-right: -1em;
+    }
+  
+    .landing-img-4 {
+      width: 28%; 
+      height: auto; 
+      object-fit: contain; 
+      margin-right: -2.5em;
+      /* padding-top: 20px; */
+    }
+    
+    .landing-img-5 {
+      width: 26%; 
+      height: auto; 
+      object-fit: contain; 
+      margin-right: -2.5em;
+    }
+    
+    .landing-img-6 {
+      width: 24%; 
+      height: auto; 
+      object-fit: contain; 
+      margin-right: -2.5em;
+    }
+  
+    
+      h1 {
+          font-size: 0.8rem;
+      }
+      
+      button {
+          font-size: 0.7rem;
+          width: 75px;
+      }
+  
+      .bigNum {
+          font-size: 3rem;
+          padding-top: 10px;
+      }
+  
+      .mediumText {
+          font-size: 0.8rem;
+          padding: 0;
+      }
+  
+      .smallText {
+          font-size: 0.6rem;
+          padding: 0;
+          margin: 10px;
+      }
   }
