--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    color: white;
+    /* color: white; */
 }
 
 body {
@@ -29,7 +29,7 @@ button:hover {
 .landing-container {
   /* display: flex; */
   /* justify-content: space-evenly; */
-  max-width: 2000px;
+  max-width: 2500px;
   overflow-x: hidden;
   background-color: #eae1d5;
 }
@@ -133,6 +133,14 @@ li {
     margin: 0px;
 }
 
+.bigNum2 {
+  padding-top: 0px;
+  font-size: 7rem;
+  font-weight: 700;
+  text-align: center;
+  margin: 0px;
+}
+
 .mediumText {
     padding: 20px;
     font-size: 3rem;
@@ -154,6 +162,54 @@ li {
     margin: 20px;
 }
 
+.promote-smallText {
+  padding: 20px;
+  font-size: 2rem;
+  font-weight: 600;
+  text-align: center;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 40px;
+  margin: 20px;
+}
+
+
+.promote-container {
+  color: black;
+  /* background-color: #FAEBD7; */
+}
+
+.promote-title {
+  text-align: 'center';
+  padding-left: 32%;
+  padding-right: 32%;
+  /* font-size: 1em; */
+}
+
+.promote-content {
+  display: flex;
+}
+
+.promote-box {
+  width: 60em;
+  height: 24em;
+  background-color: #FAEBD7;
+  margin-left: 3%;
+  margin-bottom: 5%;
+}
+
+.promote-textgroup {
+  margin-left: 2%;
+}
+
+.promote-text {
+  font-size: 1.5em;
+}
+
+.promote-text2 {
+  font-size: 1.5em;
+  font-weight: 600;
+}
 
 @media (max-width: 1024px) {
 
@@ -278,7 +334,6 @@ li {
 }
 
 
-
 /* .nav-container.responsive {
     position: relative;
 }
@@ -363,6 +418,68 @@ li {
   #menu-toggle:checked + .menu-button-container .menu-button::after {
     margin-top: 0px;
     transform: rotate(-405deg);
+  }
+
+  @media (max-width: 600px) {
+    .promote-box {
+      width: 10em;
+      height: 9em;
+      background-color: #FAEBD7;
+      margin-left: 3%;
+      margin-bottom: 5%;
+    }
+
+    .bigNum2 {
+      font-size: 1rem;
+      padding-left: 5px;
+      padding-right: 5px;
+  }
+
+  .promote-smallText {
+    font-size: 0.9rem;
+    padding: 0;
+    margin: 10px;
+}
+
+  .promote-text {
+    font-size: 0.6em;
+  }
+
+  .promote-text2 {
+    font-size: 0.6em;
+  }
+
+  }
+
+  @media (max-width: 768px) {
+    .promote-box {
+      width: 25em;
+      height: 14em;
+      background-color: #FAEBD7;
+      margin-left: 3%;
+      margin-bottom: 5%;
+    }
+
+    .bigNum2 {
+      font-size: 3.5rem;
+      padding-left: 5px;
+      padding-right: 5px;
+  }
+
+    .promote-smallText {
+      font-size: 1.5rem;
+      padding: 0;
+      margin: 10px;
+  }
+
+  .promote-text {
+    font-size: 0.9em;
+  }
+
+  .promote-text2 {
+    font-size: 0.9em;
+  }
+
   }
 
   @media (max-width: 700px) {
