--- a/style.css
+++ b/style.css
@@ -26,6 +26,10 @@ button:hover {
     background-color: #D3D3D3;
 }
 
+h1, p, input, textarea {
+    color: black;
+}
+
 .landing-container {
   /* display: flex; */
   /* justify-content: space-evenly; */
@@ -365,6 +369,40 @@ li {
     transform: rotate(-405deg);
   }
 
+.diamond-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    justify-items: center;
+}
+
+.diamond {
+    background-color: antiquewhite;
+    width: 100px;
+    height: 100px;
+    margin-top: 50px;
+    transform: rotate(45deg);
+}
+
+@media (max-width: 1200px) {
+  .bigNum {
+    font-size: 5rem;
+    padding-top: 10px;
+  }
+
+  .mediumText {
+      font-size: 2.2rem;
+      padding: 0;
+  }
+
+  .smallText {
+      font-size: 1.8rem;
+      padding: 0;
+      margin: 10px;
+  }
+
+}
+
   @media (max-width: 700px) {
     .menu-button-container {
       display: flex;
@@ -456,6 +494,7 @@ li {
     
       h1 {
           font-size: 0.8rem;
+          color: black;
       }
       
       button {
@@ -478,4 +517,10 @@ li {
           padding: 0;
           margin: 10px;
       }
+
+      .diamond {
+        height: 50px;
+        width: 50px;
+      }
+
   }
