--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ h1 {
     height: 100vh;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     justify-content: flex-start;
   }
   
@@ -311,45 +312,6 @@ li {
   font-size: 1.5em;
   font-weight: 600;
   color: white;
-}
-
-@media (max-width: 1024px) {
-  
-  .landing-img-2 {
-    width: 16%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -1em;
-  }
-  
-  .landing-img-3 {
-    width: 18%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -1em;
-  }
-
-  .landing-img-4 {
-    width: 24%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -2.5em;
-    /* padding-top: 20px; */
-  }
-  
-  .landing-img-5 {
-    width: 22%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -2.5em;
-  }
-  
-  .landing-img-6 {
-    width: 20%; 
-    height: auto; 
-    object-fit: contain; 
-    margin-right: -2.5em;
-  }
 }
 
 @media (max-width: 768px) {
