--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@
 body {
     margin: 0;
     font-family: "Poppins", sans-serif;
+    background-color: black;
+}
+
+li a {
+  color: black;
+  text-decoration: none;
 }
 
 .main-page {
@@ -23,6 +29,9 @@ button {
   border-radius: 30px;
   background-color: #ffd49c;
   color: black;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
 }
 
 button:hover {
@@ -190,7 +199,7 @@ h1 {
   }
 
   .button1 {
-    padding: 15px 170px 15px 50px;
+    padding: 15px 110px 15px 110px;
     margin-bottom: 0px;
     font-size: 14px;
     font-weight:550;
@@ -200,7 +209,7 @@ h1 {
   }
 
   .button2 {
-    padding: 15px 170px 15px 50px;
+    padding: 15px 110px 15px 110px;
     margin-bottom: 0px;
     font-size: 14px;
     font-weight:550;
@@ -216,12 +225,12 @@ li {
 }
 
 .LearnAdvertiseBox {
-    background-color: antiquewhite;
+    background-color: white;
     width: 30%;
 }
 
 .LearnAdvertiseBox p {
-    background-color: antiquewhite;
+    background-color: white;
     color: black;
 }
 
@@ -276,11 +285,11 @@ li {
 
 .promote-container {
   color: black;
-  /* background-color: #FAEBD7; */
+  /* background-color: white; */
 }
 
 .promote-title {
-  text-align: 'center';
+  text-align: center;
   padding-left: 32%;
   padding-right: 32%;
   /* font-size: 1em; */
@@ -293,7 +302,7 @@ li {
 .promote-box {
   width: 60em;
   height: 24em;
-  background-color: #FAEBD7;
+  background-color: white;
   margin-left: 3%;
   margin-bottom: 5%;
 }
@@ -371,6 +380,11 @@ li {
 
     .nav-container .hamburger {
       display: block;
+    }
+
+    li a {
+      color: white;
+      text-decoration: none;
     }
   }
 
@@ -464,7 +478,7 @@ li {
 }
 
 .diamond {
-    background-color: antiquewhite;
+    background-color: white;
     width: 100px;
     height: 100px;
     margin-top: 50px;
@@ -494,7 +508,7 @@ li {
     .promote-box {
       width: 10em;
       height: 9em;
-      background-color: #FAEBD7;
+      background-color: white;
       margin-left: 3%;
       margin-bottom: 5%;
     }
@@ -524,8 +538,8 @@ li {
   @media (max-width: 768px) {
     .promote-box {
       width: 25em;
-      height: 14em;
-      background-color: #FAEBD7;
+      height: 15em;
+      background-color: white;
       margin-left: 3%;
       margin-bottom: 5%;
     }
@@ -543,11 +557,11 @@ li {
   }
 
   .promote-text {
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
 
   .promote-text2 {
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
 
   }
@@ -598,7 +612,7 @@ li {
     
       h1 {
           font-size: 0.8rem;
-          color: black;
+          color: #ffd49c;
       }
       
       button {
