--- a/style.css
+++ b/style.css
@@ -29,9 +29,9 @@ padding: 20px 40px;
 border-width: 0px;
 font-family: "Poppins", sans-serif;
 border-radius: 7px;
-background-color: white;
-border: 3px solid black;
-color: black;
+background-color: black;
+border: 3px solid white;
+color: white;
 display: flex;
 justify-content: center;
 cursor: pointer;
@@ -81,12 +81,18 @@ margin-left: -10%;
 font-size: 16px;
 font-weight:850;
 white-space: nowrap;
+background-color: white;
+color: black;
+border-color: black;
 }
 
 .button2 {
 font-size: 15px;
 font-weight:850;
 white-space: nowrap;
+background-color: white;
+color: black;
+border-color: black;
 }
 
 .form-container {
@@ -99,6 +105,17 @@ Form {
   border: 1px solid lightgray;
   border-radius: 10px;
   padding: 20px;
+}
+
+.promote-content {
+  display: grid;
+  grid-template-rows: 1fr 1fr; 
+  grid-template-columns: 1fr 1fr; 
+  grid-gap: 0;
+  margin-right: auto;
+  margin-left: auto;
+  height: 80em;
+  width: 80em;
 }
 
 @media (max-width: 1448px) {
@@ -120,6 +137,11 @@ Form {
   overflow-x: hidden;
   overflow-y: hidden;
   background-color: white;
+  }
+
+  .promote-content {
+    height: 50em;
+    width: 50em;
   }
 
 }
@@ -217,6 +239,11 @@ Form {
   order: 2;
   margin-left: auto;
   margin-right: auto;
+}
+
+.promote-content {
+  height: 20em;
+  width: 20em;
 }
 
 }
@@ -332,25 +359,28 @@ color: black;
 text-align: center;
 }
 
-.promote-content {
-display: flex;
-}
-
 .promote-box {
-width: 60em;
-height: 24em;
-background-color: white;
-margin-left: 3%;
-margin-bottom: 5%;
-}
+  background-color: white;
+  border-radius: 10px;
+  }
+  
+.promote-box2 {
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  }
 
 .promote-textgroup {
 margin-left: 2%;
 }
 
 .promote-text {
-font-size: 1.5em;
-color: white;
+  font-size: 1.5em;
+  color: white;
+  width: 50%;
+  text-align: center;
 }
 
 .promote-text2 {
@@ -522,22 +552,15 @@ color: white;
 }
 
 @media (max-width: 600px) {
-  .promote-box {
-    width: 10em;
-    height: 9em;
-    background-color: white;
-    margin-left: 3%;
-    margin-bottom: 5%;
-  }
 
   .bigNum2 {
     font-size: 1rem;
     padding-left: 5px;
     padding-right: 5px;
-}
+  }
 
 .promote-smallText {
-  font-size: 0.9rem;
+  font-size: 0.6rem;
   padding: 0;
   margin: 10px;
 }
@@ -553,24 +576,17 @@ color: white;
 }
 
 @media (max-width: 769px) {
-  .promote-box {
-    width: 25em;
-    height: 15em;
-    background-color: white;
-    margin-left: 3%;
-    margin-bottom: 5%;
-  }
 
   .bigNum2 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     padding-left: 5px;
     padding-right: 5px;
-}
+  }
 
-  .promote-smallText {
-    font-size: 1.5rem;
-    padding: 0;
-    margin: 10px;
+.promote-smallText {
+  font-size: 1rem;
+  padding: 0;
+  margin: 10px;
 }
 
 .promote-text {
