--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ background-color: black;
 }
 
 button {
-padding: 20px 40px;
+padding: 20px 50px;
 border-width: 0px;
 font-family: "Poppins", sans-serif;
 border-radius: 7px;
@@ -37,7 +37,14 @@ justify-content: center;
 cursor: pointer;
 }
 
-button:hover {
+.learn-more {
+  padding: 20px 100px;
+  /* margin-top: 50px; */
+  font-size: 1.125em;
+}
+
+button:hover,
+button:focus {
   background-color: #D3D3D3;
 }
 
@@ -118,152 +125,12 @@ Form {
   width: 80em;
 }
 
-@media (max-width: 1448px) {
-.button1 {
-  padding: -15px 65px;
-  font-size: 15px;
-  font-weight:850;
-  margin-right: -5%;
-}
-
-.button2 {
-  padding: -15px 65px;
-  font-size: 15px;
-  font-weight:850;
-  margin-left: -5%;
-}
-
-.landing-container {
-  overflow-x: hidden;
-  overflow-y: hidden;
-  background-color: white;
-  }
-
-  .promote-content {
-    height: 50em;
-    width: 50em;
-  }
-
-}
-
-@media (max-width: 1025px) {
-.landing-container {
-  overflow-x: hidden;
-  overflow-y: hidden;
-  background-color: white;
-}
-
-.landing-img-container {
-  height: 100vh;
-  width: 100vw;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  display: flex;
-  justify-content: center;
-}
-
-.landing-img-1 {
-  width: 45%;
-}
-
-.new-cup {
-  width: 45%;
-}
-
-.button1 {
-  padding: 8px 22px;
-  font-size: 15px;
-  font-weight:850;
-}
-
-
-.button2 {
-  padding: 8px 22px;
-  font-size: 15px;
-  font-weight:850;
-}
-
-}
-
-@media (max-width: 769px) {
-.landing-container {
-  overflow-x: hidden;
-  background-color: black;
-}
-
-.landing-img-container {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.cup-container {
-  order: -1;
-  display: flex;
-  justify-content: center;
-}
-
-.landing-img-1 {
-  width: 50%;
-  margin-right: 0;
-}
-
-.new-cup {
-  width: 50%;
-  margin-left: 0;
-}
-
-.button1 {
-  padding: 15px 110px 15px 110px;
-  margin-bottom: 50px;
-  font-size: 14px;
-  font-weight:550;
-  align-self: center;
-  white-space: nowrap;
-  order: 2;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.button2 {
-  padding: 15px 110px;
-  margin-bottom: 0px;
-  margin-right: 0;
-  font-size: 14px;
-  font-weight:550;
-  align-self: center;
-  white-space: nowrap;
-  order: 2;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.promote-content {
-  height: 20em;
-  width: 20em;
-}
-
-}
-
 li {
 color: white;
 }
-.LearnAdvertise-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 2fr 2fr 2fr; 
-  height: 100%;
-  margin-left: 40px;
-  margin-right: 40px;
-  /* gap: 30px; */
-}
 
 .LearnAdvertiseBox {
-  /* grid-column: span 2; */
-  /* background-color: white; */
+  padding: 0px;
   width: 30%;
   aspect-ratio: 1/1;
   background-color: white;
@@ -272,52 +139,34 @@ color: white;
   justify-content: center;
 }
 
-/* .LearnAdvertiseBox-1 {
-  grid-column: 1;
-  grid-row: span 2;
-  background-color: white;
-  height: 100%;
-}
-.LearnAdvertiseBox-2 {
-  grid-column: 2 ;
-  grid-row: span 2;
-  background-color: white;
-}
-.LearnAdvertiseBox-3 {
-  grid-column: 3;
-  grid-row: span 2;
-  background-color: white;
-} */
-
 .LearnAdvertiseBox p {
   background-color: white;
   color: black;
 }
 
 .bigNum {
-  /* padding-top: 40px; */
-  font-size: 12rem;
+  font-size: 10rem;
   font-weight: 700;
   text-align: center;
   margin: 0px;
-  border: 1px solid white;
 }
 
 .bigNum2 {
-/* padding-top: 0px; */
-font-size: 7rem;
-font-weight: 700;
-text-align: center;
-margin: 0px;
-}
+  /* padding-top: 0px; */
+  font-size: 9.5rem;
+  font-weight: 600;
+  text-align: center;
+  margin: 0px;
+  }
 
 .mediumText {
-  padding: 20px;
+  /* padding: 20px; */
   font-size: 3rem;
   font-weight: 700;
   text-align: center;
-  padding-left: 10%;
-  padding-right: 10%;
+  line-height: 0;
+  /* padding-left: 10%;
+  padding-right: 10%; */
   margin: 0px;
   border: 1px solid white;
 }
@@ -325,12 +174,12 @@ margin: 0px;
 .smallText {
   padding: 20px;
   font-size: 2rem;
-  font-weight: 600;
+  font-weight: 400;
   text-align: center;
-  padding-left: 5%;
+  /* padding-left: 5%;
   padding-right: 5%;
   padding-bottom: 40px;
-  margin: 20px;
+  margin: 20px; */
 }
 
 .promote-subtitle {
@@ -341,12 +190,10 @@ margin: 0px;
 
 .promote-smallText {
 padding: 20px;
-font-size: 2rem;
+font-size: 3.1rem;
 font-weight: 600;
 text-align: center;
-padding-left: 5%;
-padding-right: 5%;
-padding-bottom: 40px;
+/* padding-bottom: 40px; */
 margin: 20px;
 }
 
@@ -362,6 +209,9 @@ text-align: center;
 .promote-box {
   background-color: white;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   }
   
 .promote-box2 {
@@ -424,8 +274,147 @@ color: white;
   cursor: pointer;
 }
 
+@media (max-width: 1448px) {
+  .button1 {
+    padding: -15px 65px;
+    font-size: 15px;
+    font-weight:850;
+    margin-right: -5%;
+  }
+  
+  .button2 {
+    padding: -15px 65px;
+    font-size: 15px;
+    font-weight:850;
+    margin-left: -5%;
+  }
+  
+  .landing-container {
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-color: white;
+    }
+  
+    .promote-content {
+      height: 50em;
+      width: 50em;
+    }
+    
+    .bigNum2 {
+      font-size: 6.5rem;
+    }
+  
+    .promote-text {
+  
+    }
+  
+    .promote-smallText {
+      font-size: 2rem;
+    }
+  
+  }
+  
+  @media (max-width: 1025px) {
+  .landing-container {
+    overflow-x: hidden;
+    overflow-y: hidden;
+    background-color: white;
+  }
+  
+  .landing-img-container {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .landing-img-1 {
+    width: 45%;
+  }
+  
+  .new-cup {
+    width: 45%;
+  }
+  
+  .button1 {
+    padding: 8px 22px;
+    font-size: 15px;
+    font-weight:850;
+  }
+  
+  
+  .button2 {
+    padding: 8px 22px;
+    font-size: 15px;
+    font-weight:850;
+  }
+  
+  }
+  
+  @media (max-width: 769px) {
+  .landing-container {
+    overflow-x: hidden;
+    background-color: black;
+  }
+  
+  .landing-img-container {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  .cup-container {
+    order: -1;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .landing-img-1 {
+    width: 50%;
+    margin-right: 0;
+  }
+  
+  .new-cup {
+    width: 50%;
+    margin-left: 0;
+  }
+  
+  .button1 {
+    padding: 15px 110px 15px 110px;
+    margin-bottom: 50px;
+    font-size: 14px;
+    font-weight:550;
+    align-self: center;
+    white-space: nowrap;
+    order: 2;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .button2 {
+    padding: 15px 110px;
+    margin-bottom: 0px;
+    margin-right: 0;
+    font-size: 14px;
+    font-weight:550;
+    align-self: center;
+    white-space: nowrap;
+    order: 2;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  }
+
+
 /* Show hamburger menu and hide navbar links in mobile view */
 @media (max-width: 769px) {
+
   .nav-container {
     flex-direction: column;
   }
@@ -575,13 +564,14 @@ color: white;
 
 }
 
-@media (max-width: 769px) {
+@media (max-width: 800px) {
 
   .bigNum2 {
     font-size: 2.5rem;
     padding-left: 5px;
     padding-right: 5px;
   }
+
 
 .promote-smallText {
   font-size: 1rem;
@@ -596,6 +586,11 @@ color: white;
 .promote-text2 {
   font-size: 0.8em;
 }
+
+  .learn-more {
+    white-space: nowrap;
+    font-size: 1em;
+  }
 
 }
 
@@ -689,21 +684,26 @@ color: white;
       }
 
 .bigNum {
-  font-size: 10rem;
+  font-size: 7rem;
   /* padding-top: 10px; */
 }
 
 .mediumText {
-    font-size: 2.3rem;
+    font-size: 2rem;
     padding: 0;
 }
 
-/* .smallText {
-    font-size: 0.8rem;
-    padding: 0;
-    margin: 10px;
-} */
+.smallText {
+    font-size: 1.3rem;
+}
 
+}
+
+@media (max-width: 800px) {
+  .promote-content {
+    height: 40em;
+    width: 40em;
+  }
 }
 
 @media (max-width: 769px) {
@@ -734,11 +734,18 @@ color: white;
   }
 
   .diamond {
-    height: 2.5em;
-    width: 2.5em;
+    height: 4em;
+    width: 4em;
   }
 
 }
+
+@media (max-width: 658px) {
+  .promote-content {
+    height: 30em;
+    width: 30em;
+  }
+} 
 
 @media (max-width: 576px) {
   
@@ -767,9 +774,95 @@ color: white;
       margin: 10px;
   }
 
-  .diamond {
-    height: 2.5em;
-    width: 2.5em;
+  /* .diamond {
+    height: 2.8em;
+    width: 2em;
+  } */
+
+  .learn-more {
+    padding: 15px 70px;
+    font-size: 0.8em; 
   }
 
 }
+
+@media (max-width: 484px) {
+  .diamond {
+    height: 2.8em;
+    width: 2.8em;
+  }
+  .promote-content {
+    height: 25em;
+    width: 25em;
+  }
+}
+
+@media (max-width: 400px) {
+  .promote-content {
+    height: 20em;
+    width: 20em;
+  }
+
+  .promote-text {
+    font-size: 0.6em;
+  }
+} 
+
+@media (max-width: 369px) {
+  body {
+    overflow-x: hidden;
+  }
+  .diamond {
+    height: 2.4em;
+    width: 2.4em;
+  }
+  .header-galaxy {
+    font-size: 0.75em;
+  }
+}
+
+@media (max-width: 325px) {
+
+  .diamond-container {
+    gap: 0px;
+  }
+
+  .diamond {
+    height: 2.3em;
+    width: 2.3em;
+  }
+  .promote-content {
+    height: 15em;
+    width: 15em;
+  }
+
+  .promote-text {
+    font-size: 0.5em;
+  }
+
+  .promote-smallText {
+    font-size: 0.7em;
+  }
+
+  .bigNum2 {
+    font-size: 1.6rem;
+  }
+
+  body {
+    overflow-x: hidden;
+  }
+
+  .bigNum {
+    font-size: 2.5rem;
+  }
+
+  .mediumText {
+    font-size: 0.7rem;
+  }
+
+  .smallText {
+    font-size: 0.6rem;
+  }
+
+
+} 
